<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scene2"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_title"
        android:textSize="20sp"
        android:transitionName="text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="419dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/mate_mate_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mate_mate" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="176dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="80dp"
            android:contentDescription="@string/app_logo"
            android:transitionName="logo"
            app:srcCompat="@drawable/ic_logomathgame" />

        <Space
            android:id="@+id/space"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

        </Space>

        <LinearLayout
            android:id="@+id/layoutRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/button"
                android:layout_width="179dp"
                android:layout_height="52dp"
                android:text="@string/iniciar_sesion" />

            <Button
                android:id="@+id/button2"
                android:layout_width="177dp"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:text="@string/registrarse" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/terminos_condiciones"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>